--- a/my-app/src/components/header/header.scss
+++ b/my-app/src/components/header/header.scss
@@ -1,17 +1,20 @@
 .header {
   display: flex;
   justify-content: center;
+  align-items: center;
   position: relative;
   background-color: #210803;
-
   width: 100%;
+  height: 150px;
   &__logo {
     position: absolute;
     top: 0;
     left: 0;
-    width: 50px;
+    width: 210px;
     height: 100%;
-    background-image: "../../assets/logo.png" center;
+    background-image: url("../../assets/logo.png");
+    background-size: contain;
+    background-repeat: no-repeat;
     z-index: 1;
   }
   &__content {
@@ -29,7 +32,13 @@
   }
   &__navigation {
     position: absolute;
-    top: 0;
-    right: 0;
+    top: 150px;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    width: 50px;
+    height: Auto;
+    padding: 10px;
+    border: 1px blue;
   }
 }
