--- a/my-app/src/index.scss
+++ b/my-app/src/index.scss
@@ -142,3 +142,9 @@ table {
   font-weight: normal;
   font-style: normal;
 }
+
+.title {
+  font-family: "blackknightflfregular", sans-serif;
+  font-size: 200%;
+}
+
