--- a/my-app/src/components/header/header.scss
+++ b/my-app/src/components/header/header.scss
@@ -1,9 +1,12 @@
+@import "../../sass-utils/mixins.scss";
+@import "../../sass-utils/variables.scss";
+
 .header {
   display: flex;
   justify-content: center;
   align-items: center;
   position: relative;
-  background-color: #210803;
+  background-color: rgba($secondary-color, 0.9);
   width: 100%;
   height: 150px;
   &__logo {
@@ -19,26 +22,15 @@
   }
   &__content {
     &__title {
-      font-family: "blackknightflfregular", "sans-serif";
-      font-size: 60px;
-      color: #fff;
-      text-align: center;
+      font-family: "sans-serif";
+      font-size: 150%;
+      color: $primary-color;
+      text-align: left;
     }
     &__subhead {
       font-family: "sans-serif";
       color: #fff;
       text-align: center;
     }
-  }
-  &__navigation {
-    position: absolute;
-    top: 150px;
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    width: 50px;
-    height: Auto;
-    padding: 10px;
-    border: 1px blue;
   }
 }
