--- a/my-app/src/index.scss
+++ b/my-app/src/index.scss
@@ -143,8 +143,14 @@ table {
   font-style: normal;
 }
 
-.title {
+h1 {
   font-family: "blackknightflfregular", sans-serif;
   font-size: 200%;
 }
+
+h2 {
+  font-family: sans-serif;
+  font-size: 150%;
+}
+
 
