--- a/my-app/src/sass-utils/variables.scss
+++ b/my-app/src/sass-utils/variables.scss
@@ -1,3 +1,9 @@
-$primary-color: red;
+$primary-color: #c7c6c5;
 $secondary-color: #210803;
-$burger-menu-radius: 50px;
+$accent-color: #e2832b;
+$color-white: #fff;
+$color-black: black;
+
+$desktop-header-radius: 75px;
+$mobile-header-radius: 50px;
+$tablet-header-radius: 50px;
