--- a/my-app/src/components/header/header.scss
+++ b/my-app/src/components/header/header.scss
@@ -8,17 +8,28 @@
   position: relative;
   background-color: rgba($secondary-color, 0.9);
   width: 100%;
-  height: 50px;
   
   &__logo {
     position: absolute;
     top: 0;
     left: 0;
-    width: 100px;
+    width: 110px;
     height: 100%;
     background-image: url("../../assets/logo.png");
     background-size: contain;
     background-repeat: no-repeat;
     z-index: 1;
+  }
+}
+
+@include desktop-layout {
+  .header {
+    height: $desktop-header-radius;
+  }
+}
+
+@include mobile-layout {
+  .header {
+    height: $mobile-header-radius;
   }
 }
