--- a/my-app/src/components/navigation/navigation.scss
+++ b/my-app/src/components/navigation/navigation.scss
@@ -78,7 +78,6 @@
     justify-content: center;
     align-items: center;
     left: 0;
-    width: 100%;
     opacity: 0;
     overflow-x: hidden;
     visibility: hidden;
@@ -160,6 +159,9 @@
       opacity: 1;
       visibility: visible;
       top: 0;
+      left: 15%;
+      right: 15%;
+      width: 70%;
       height: 75px;
       background: transparent;
       &__nav {
@@ -171,6 +173,7 @@
     }
   }
 }
+
 @include mobile-layout {
   .navigation {
     &__burger {
@@ -195,6 +198,7 @@
       top: 50px;
       height: 100%;
       background: rgba($secondary-color, 0.8);
+      width: 100%;
       &__nav {
         &__link a {
           font-size: 200%;
