--- a/my-app/src/components/navigation/navigation.scss
+++ b/my-app/src/components/navigation/navigation.scss
@@ -28,7 +28,7 @@
         left: 25%;
         width: 50%;
         height: 3px;
-        background: hsla(0, 0%, 100%, 0.7);
+        background: rgba($secondary-color,0.7);
         border-radius: 10px;
         overflow: hidden;
         transition: 0.5s;
@@ -52,7 +52,7 @@
           left: 0;
           width: 100%;
           height: 100%;
-          background: orange;
+          background: $secondary-color;
           transform: translateX(-100%);
           transition: 0.25s;
         }
@@ -167,7 +167,7 @@
       &__nav {
         &__link a {
           font-size: 100%;
-          color: $primary-color;
+          color: $secondary-color;
         }
       }
     }
