--- a/my-app/src/sass-utils/variables.scss
+++ b/my-app/src/sass-utils/variables.scss
@@ -1,9 +1,15 @@
 $primary-color: #c7c6c5;
 $secondary-color: #210803;
 $accent-color: #e2832b;
+$dark-color: #585959;
 $color-white: #fff;
 $color-black: black;
 
 $desktop-header-radius: 75px;
 $mobile-header-radius: 50px;
 $tablet-header-radius: 50px;
+
+
+$body: Arial, Helvetica, sans-serif;
+$titles: "blackknightflfregular", Arial, Helvetica, sans-serif;
+$special: "Abril Fatface", serif;
