--- a/my-app/src/components/banner/banner.scss
+++ b/my-app/src/components/banner/banner.scss
@@ -33,7 +33,8 @@
   align-items: center;
   width: 100%;
   height: 500px;
-  background-size: contain;
+  background-size: cover;
+  background-position: center;
   background-repeat: no-repeat;
   margin-bottom: 50px;
   box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.5);
@@ -50,12 +51,14 @@
 
     &__title {
       margin-bottom: 20px;
-      border-bottom: solid 1px $primary-color;
+      border-bottom: solid 1px rgba($accent-color, 0.7);
       text-align: center;
+      color: $color-white;
     }
 
     &__subhead {
       text-align: center;
+      color: $color-white;
     }
   }
 
