--- a/my-app/src/index.scss
+++ b/my-app/src/index.scss
@@ -149,7 +149,7 @@ table {
 
   main {
     width: 1224px;
-    margin-top: $desktop-header-radius;
+    margin-top: $desktop-header-radius + 1px;
     margin-left: auto;
     margin-right: auto;
   }
