--- a/my-app/src/components/header/header.scss
+++ b/my-app/src/components/header/header.scss
@@ -23,6 +23,7 @@
     border-bottom-right-radius: 10px;
     background-size: contain;
     background-repeat: no-repeat;
+    background-color: transparent;
     z-index: 2;
   }
 }
