--- a/my-app/src/components/footer/footer.scss
+++ b/my-app/src/components/footer/footer.scss
@@ -7,7 +7,9 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+    height: 200px;
     background-color: $secondary-color;
+    bottom: 0;
 
     &__copyright {
         // font-family: $special;
@@ -15,10 +17,11 @@
     }
 
     &__logo {
-        width: 50px;
-        height: auto;
+        width: 100px;
+        height: 100px;
         background-position: center;
         background-size: contain;
         background-repeat: no-repeat;
+        background-color: transparent;
     }
 }
