--- a/my-app/src/index.scss
+++ b/my-app/src/index.scss
@@ -152,6 +152,7 @@ table {
     margin-top: $desktop-header-radius + 1px;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 100px;
   }
 
   h1 {
