--- a/my-app/src/components/header/header.scss
+++ b/my-app/src/components/header/header.scss
@@ -17,8 +17,8 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 104px;
-    height:100%;
+    width: 105px;
+    height: $desktop-header-radius;
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
     background-size: contain;
