--- a/my-app/src/pages/bells/bells.scss
+++ b/my-app/src/pages/bells/bells.scss
@@ -23,7 +23,7 @@
 
       &__title {
         text-align: center;
-        font-family: "blackknightflfregular";
+        font-family: $titles;
         margin-bottom: 30px;
         padding-bottom: 15px;
         color: $secondary-color;
