--- a/my-app/src/pages/project/project.scss
+++ b/my-app/src/pages/project/project.scss
@@ -1,9 +1,60 @@
-.project{
-    &__image {
-        width: auto;
-        height: 400px;
-        & img {
-            height: 100%;
-        }
+@import "../../sass-utils/mixins.scss";
+@import "../../sass-utils/variables.scss";
+
+.projects {
+  &__article {
+    display: flex;
+    justify-content: space-between;
+
+    &__text {
+      display: flex;
+      flex-direction: column;
+      width: 60%;
+
+      &__title {
+        text-align: center;
+        font-family: $titles;
+        margin-bottom: 30px;
+        padding-bottom: 15px;
+        border-bottom: solid 1px $accent-color;
+      }
+
+      &__paragraph {
+        text-align: justify;
+        padding: 5px;
+      }
     }
+
+    &__image {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      width: 30%;
+
+      &__container {
+        display: flex;
+        justify-content: center;
+        height: 500px;
+
+        & img {
+          height: 100%;
+        }
+      }
+
+      & span {
+        font-size: 10px;
+        width: 100%;
+        text-align: center;
+        margin-top: 20px;
+      }
+    }
+
+    &:nth-child(odd) {
+      flex-direction: row;
+    }
+
+    &:nth-child(even) {
+      flex-direction: row-reverse;
+    }
+  }
 }
