--- a/my-app/src/sass-utils/variables.scss
+++ b/my-app/src/sass-utils/variables.scss
@@ -1,9 +1,9 @@
-$primary-color: #c7c6c5;
-$secondary-color: #210803;
+$primary-color: #90cab4;
+$secondary-color: #d1ddd8;
 $accent-color: #e2832b;
-$dark-color: #585959;
+$dark-color: #3ca07a;
 $color-white: #fff;
-$color-black: black;
+$color-black: #333a37;
 
 $desktop-header-radius: 75px;
 $mobile-header-radius: 50px;
@@ -11,5 +11,5 @@ $tablet-header-radius: 50px;
 
 
 $body: Arial, Helvetica, sans-serif;
-$titles: "blackknightflfregular", Arial, Helvetica, sans-serif;
+$titles: "Fjord One", serif;
 $special: "Abril Fatface", serif;
