--- a/my-app/src/components/footer/footer.scss
+++ b/my-app/src/components/footer/footer.scss
@@ -8,13 +8,13 @@
     align-items: center;
     width: 100%;
     height: 200px;
-    background-color: $secondary-color;
+    background-color: $color-black;
     bottom: 0;
     border-top: solid 3px $accent-color;
 
     &__copyright {
         // font-family: $special;
-        color: $accent-color;
+        color: $color-white;
         text-align: center;
     }
 
