--- a/my-app/src/index.scss
+++ b/my-app/src/index.scss
@@ -1,5 +1,6 @@
 @import "./sass-utils/mixins.scss";
 @import "./sass-utils/variables.scss";
+@import url('https://fonts.googleapis.com/css2?family=Fjord+One&display=swap');
 
 /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
@@ -137,14 +138,6 @@ table {
   border-spacing: 0;
 }
 
-@font-face {
-  font-family: "blackknightflfregular";
-  src: url("./assets/blackknightflf-webfont.woff2") format("woff2"),
-    url("./assets/blackknightflf-webfont.woff") format("woff"),
-    url("./assets/blackknightflf-webfont.ttf") format("ttf");
-  font-weight: normal;
-  font-style: normal;
-}
 @include desktop-layout {
 
   main {
@@ -155,22 +148,24 @@ table {
     padding-bottom: 100px;
   }
 
-  h1 {
+  .titles {
     font-family: $titles;
+    color: $color-black;
+  }
+
+  h1 {
+    @extend .titles;
     font-size: 50px;
-    color: $secondary-color
   }
 
   h2 {
-    font-family: $titles;
+    @extend .titles;
     font-size: 40px;
-    color: $secondary-color
   }
 
   h3 {
-    font-family: $titles;
+    @extend .titles;
     font-size: 30px;
-    color: $secondary-color
   }
 
   div,
@@ -180,5 +175,6 @@ table {
     font-family: $body;
     font-size: 20px;
     line-height: 1.3;
+    color: $color-black;
   }
 }
